Switching source to paizo.com/prd
at the moment just for the crawler, not for the parser